replace usage of deprecated newInstance